@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.767 2008/10/09 09:55:05 tr Exp $
+# $Id: CHANGES,v 1.768 2008/10/13 13:22:44 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -18,7 +18,9 @@
     availabe in online repository packages.
 
 2.3.4 (2008/??/??)
-   (2008/10/09) Fixed bug# 3358 - Removed useless error warning in stats module.
+ - (2008/10/13) Fixed bug# 3367 - Escalation of first response gets not changed
+    on note-external (which was working in OTRS 2.2.x).
+ - (2008/10/09) Fixed bug# 3358 - Removed useless error warning in stats module.
 
 2.3.3 (2008/10/02)
  - (2008/09/30) Fixed bug# 3335 - No user name in pdf - print of stats-report
